--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <embed src="https://conrading.github.io/differenceIsFine.pdf" type="application/pdf"/>
+    <embed src="https://conrading.github.io/wroclaw-project/differenceIsFine.pdf" type="application/pdf"/>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
